<package>
  <name>cnrg_ntu_tb3</name>
  <version>0.0.0</version>
  <description>metapackage of cnrg_ntu_tb3</description>
  <maintainer email="edward17829991@gmail.com">Edward Chen</maintainer>
  <maintainer email="q253upng@gmail.com">Shih Hung Tseng</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>binaural_microphone</run_depend>

  <export>
    <metapackage/> 
  </export>
</package>
