<?xml version="1.0"?>
<package format="2">
  <name>realsense_rgbd_camera</name>
  <version>0.0.0</version>
  <description>Package for launching the realsense r200 camera</description>
  <maintainer email="q253upng@gmail.com">Shih Hung Tseng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
  
</package>
