<?xml version="1.0"?>
<package format="2">
  <name>tb3_demo</name>
  <version>0.0.0</version>
  <description>For the purpose of demo</description>
  <maintainer email="q253upng@gmail.com">Shih Hung Tseng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
  </export>
  
</package>
